2008-12-19  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9964: Missing file icon PPT

2008-12-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9772: t3lib_parsehtml_proc does not provide Page TSConfig to user-defined RTE transformations

2008-12-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #7265: Submodules of Web module can't work with mod.php and the _DISPATCH system

2008-12-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9944: Unneccessary wildcard string comparisons in EM (thanks to Marcus Krause)
	* Fixed bug #9947: gzip compression does not work in BE at all
	* Fixed bug #9971: A call to protected method in index_ts.php
	* Fixed bug #9886: Hardcoded error messages (Parameter Error:) in some files related to file list module (thanks to Stefano Kowalke)
	* Fixed bug #9887: Labels 'TEMP' and 'RECYCLER' are hardcoded (thanks to Stefano Kowalke)
	* Fixed bug #9978: Remove references to gzip_encode from File and Access modules
	* Fixed bug #9741: wrong anchor links with absRefPrefix option enabled (thanks to Stefan Galinski)

2008-12-18  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Fixed bug #5835: get rid of clear.gif with space (thanks to Susanne Moog)

2008-12-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #9511: getHtmlTemplate should use resolveBackPath. Fixes bug for extension BE modules using templates in certain environments (symlinked typo3/ dir) (thanks to Steffen Gebert)

2008-12-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9596: htmlArea RTE does not work in IRRE subelements
	* Added feature #7963: htmlArea RTE css parsing: honour classes with element context selectors inside other context selectors (thanks to Mikkel Ricky)
	* Fixed bug #9969: htmlArea RTE: blindImageOptions is not honoured in TYPO3 4.3-dev

2008-12-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9925: Initialization of new caching framework breaks some eID scripts

2008-12-15  Dmitry Dulepov  <dmitry@typo3.org>
